--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
 </head>
 
 <body>
+  <section class="search-section">
+    <h1>Thinkful Tube</h1>
+    <form>
+      <input type="text">
+      <button type="submit">Search</button>
+    </form>
+  </section>
 
+  <section class="results-section">
+    <ul class="search-results">
 
+    </ul>
+  </section>
 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
