pulled in API info, added thumbnail

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <section class="search-section">
     <h1>Thinkful Tube</h1>
     <form>
-      <input type="text">
-      <button type="submit">Search</button>
+      <input type="text" id="text-input">
+      <button type="submit" id="submit-button">Search</button>
     </form>
   </section>
 
