--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     </ul>
   </section>
 
+  <div class="lightbox">
+    <div class="lightbox-container">
+    </div>
+  </div>
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="js/app.js"></script>
 </body>
